bk_ida/gccida/g0/find_split_point
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3386:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v20; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3388:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v22; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3393:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_0; // [rsp+14h] [rbp-ACh] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3396:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+2Ch] [rbp-94h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3405:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+7Ch] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3406:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+7Ch] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3449:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3452:29: error: use of undeclared identifier 'machine_mode'
v24 = gen_rtx_fmt_e( NOT, ( machine_mode)*( ( unsigned __int8 *)x + 2), v23); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3462:25: error: use of undeclared identifier 'machine_mode'
&& !memory_address_p( ( machine_mode)*( ( unsigned __int8 *)x + 2), x->fld[0].rtx) ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3478:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3605:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int8 *)inner + 2)] != MODE_PARTIAL_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3606:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( unsigned __int8 *)( *( _QWORD *)&x[1] + 2LL)] != MODE_PARTIAL_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3625:10: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( rtx)( *splitd)[1] == const_int_rtx[64] ) 
         ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/combine.c:3628:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_split_point/src/obj/combine.o] Error 1
